Finish mobile template (hopefully...).  Fix mixed up icons on contact.php.  Add additional text to index.php.  Add overflow rules to css to fix mobile horizontal scrolling.  Improve line-height, smoothness of font icons, add box-sizing to inputs, correct widths and heights of inputs.  Start media query for tablet css.

--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,11 @@ DEFAULT - MOBILE CSS
 *******************/
 
 /*** BODY ***/
+html {overflow-x: hidden;}
 body {
 	font-family: "Helvetica", "Arial", sans-serif;
 	font-weight: 300;
+    overflow-x: hidden;
 }
 
 /*** HEADER ***/
@@ -101,6 +103,7 @@ nav li a:hover {
 }
 .about-me .description h2 {
 	font-size: 2.3em;
+    line-height: 1.2em;
 	font-weight: 500;
 	margin-bottom: 0.7em;
 }
@@ -124,6 +127,7 @@ nav li a:hover {
 }
 .about-me .wrapper .box i {
     font-size: 9em;
+    -webkit-font-smoothing: antialiased;
     color: rgba(46, 185, 113, 1.0);
     text-shadow: 1px 1px 2px rgba(13, 63, 25, 1);
 }
@@ -147,6 +151,7 @@ nav li a:hover {
 }
 .blog .description h2 {
 	font-size: 1.5em;
+    line-height: 1.1em;
 	font-weight: 500;
 }
 .blog .project {background: #777;}
@@ -181,11 +186,16 @@ footer .newsletter .left {
 }
 footer .newsletter .left input {
 	color: #787878;
-	width: 99%;
-	height: 2.5em;
+	width: 100%;
+	height: 3.5em;
 	margin-top: 1em;
 	border: none;
     border-radius: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 footer .newsletter .right {
 	display: block;
@@ -202,6 +212,11 @@ footer .newsletter .right .submit-button {
 	border: none;
     border-radius: 0;
 	cursor: pointer;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 footer .newsletter .right .submit-button:hover {
 	background: rgba(46, 185, 113, 0.8);
@@ -327,11 +342,11 @@ section {margin-bottom: 2.5em;}
     display: none;
     position: absolute;
     text-align: center;
-    top: 2.5em;
+    bottom: 1em;
     left: 0;
     right: 0;
     color: #FFF;
-    font-size: 3em;
+    font-size: 2em;
     z-index: 10;
 }
 .main-content figure img {
@@ -378,6 +393,7 @@ section {margin-bottom: 2.5em;}
     margin-bottom: 1em;
 }
 .main-content form .form-item {
+    width: 100%;
     margin-bottom: 2em;
 }
 .main-content form .form-item label {
@@ -396,19 +412,37 @@ section {margin-bottom: 2.5em;}
 .main-content form .form-item input[type="tel"],
 .main-content form .form-item input[type="url"]{
     color: #787878;
-    width: 99%;
-    height: 2.5em;
+    width: 100%;
+    height: 3.5em;
     border: solid 1px #787878;
+    border-radius: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .main-content form .form-item select {
     background: #FFF;
     width: 100%;
     height: 2.5em;
     border: solid 1px #787878; 
+    border-radius: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .main-content form .form-item textarea {
-    width: 99%;
+    width: 100%;
     height: 10em;
+    border-radius: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .main-content form .form-item .radio-label {
     font-weight: 300;
@@ -454,3 +488,10 @@ section {margin-bottom: 2.5em;}
 .main-content .other-contact li a#google-plus:hover {color: rgba(221, 75, 57, 1);}
 .main-content .other-contact li a#linkedin {color: rgba(0, 123, 182, 0.7);}
 .main-content .other-contact li a#linkedin:hover {color: rgba(0, 123, 182, 1);}
+
+/**********
+TABLET CSS
+**********/
+@media only screen and (min-width: 560px) {
+
+} /* End tablet */
